class_demo1
package ca.mcscert.se2aa4.demos.tennis;

public class Match {
    String name = "Soft";
    public Match(Integer p1Strength, Integer p2Strength){

    }
    public String play(){
        return "No winner... yet!";
    }

}

package ca.mcscert.se2aa4.demos.tennis;

public class Match {
    String name = "Soft";
    public Match(){

    }

}
main
